--- a/js.html
+++ b/js.html
@@ -13,6 +13,7 @@
         let b="hello";
         const c=1.5;
         var msg ="Hello";
+        console.log(typeof msg);
         hellFunction();
         function hellFunction(){
             let i=99;
@@ -20,7 +21,12 @@
             document.write("<h1>"+ msg +" word!"+"</h1>")
             console.log(msg +"word!");//sua loi danh cho lap trinh vien
         }
-
+//javascript laf ngoon ngu kich ban "scripting" huong doi tuong mot phan(khong hoan toan)
+console.log(b.toLowerCase());//huong doi tuong
+let str ="hello";
+let arr = str.split('');
+console.log(arr);
+arr.reverse();
     </script>
 </body>
 </html>
